[gd_scene format=3 uid="uid://12yssag0vuvj"]

[ext_resource type="Script" uid="uid://y22wdbrk2ucp" path="res://Scripts/TopDownPlayer.gd" id="1_bqyoq"]
[ext_resource type="SpriteFrames" uid="uid://cduxxswdlk85n" path="res://Assets/Sprites/boy.tres" id="2_xvtk5"]
[ext_resource type="Texture2D" uid="uid://dxp77wq60c2rr" path="res://Assets/Textures/CloudTexture.png" id="3_8vxmb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n4sts"]
radius = 11.0
height = 68.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvbjh"]
size = Vector2(61, 56)

[sub_resource type="Curve" id="Curve_m2jh0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_3gc37"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Player" type="CharacterBody2D" unique_id=1737942838 groups=["Player"]]
script = ExtResource("1_bqyoq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1034234299]
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("2_xvtk5")
animation = &"boy_walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=947904091]
position = Vector2(3, -4)
shape = SubResource("CapsuleShape2D_n4sts")

[node name="Collision" type="Area2D" parent="." unique_id=1544567974]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision" unique_id=1263188993]
position = Vector2(-1.5, 5)
shape = SubResource("RectangleShape2D_tvbjh")

[node name="ParticleTrails" type="CPUParticles2D" parent="." unique_id=1951533285]
position = Vector2(0, 32)
emitting = false
amount = 20
texture = ExtResource("3_8vxmb")
lifetime = 0.4
speed_scale = 0.8
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.05
scale_amount_max = 0.15
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="DeathParticles" type="CPUParticles2D" parent="." unique_id=1884649272]
position = Vector2(-1, 15)
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.4
emission_shape = 2
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 15.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
